--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: |
+        set -e
+        mvn -B package --file pom.xml
 
     - name: Build and push docker image
       uses: mr-smithers-excellent/docker-build-push@v6
